@@ -153,6 +153,11 @@ Changes since version 0.2-2
 	
 Changes since version 0.2-3
 
-	* the list of primes used to generate halton sequences was two short, its length has been increased
+	* the list of primes used to generate halton sequences was two
+	short, its length has been increased
 
-	* halton sequences where used to estimate mixed logit even for the default value of halton (NULL), this has been fixed
+	* halton sequences where used to estimate mixed logit even for the
+	default value of halton (NULL), this has been fixed
+
+	* the contribution of each observation to the gradient is not
+	returned as the 'gradient' element of mlogit objects
